Fixing word wrapping in post title

--- a/ui/static/css/home.css
+++ b/ui/static/css/home.css
@@ -230,6 +230,7 @@ body {
 }
 
 .title {
+    max-width: 80%;
     font-size: 23px;
 }
 
