--- a/ui/static/css/post.css
+++ b/ui/static/css/post.css
@@ -197,6 +197,7 @@ body {
 }
 
 .title {
+    max-width: 80%;
     font-size: 23px;
 }
 
